--- a/_config.yml
+++ b/_config.yml
@@ -1,155 +1,99 @@
-# ---------------- #
-#   Main Configs   #
-# ---------------- #
-baseurl:
-url: https://mazhuang.org
-date_format: "ordinal"
-title: 码志
-subtitle: "公众号：闷骚的程序员"
-description: "马壮的个人博客，公众号：闷骚的程序员"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
+title: 固件全收集
 timezone: Asia/Shanghai
-encoding: "utf-8"
+collections:
+  posts:
+    title: Posts
+    output: true
+  uploads:
+    title: Uploads
+    output: true
+  wiki:
+    title: Wiki
+    output: true
+    permalink: "/wiki/:path/"
+baseurl: 
+url: https://getrom.github.io
+date_format: ordinal
+subtitle: 刷出新天地，打开新世界的大门
+description: IoT设备固件全收集
+keywords: N1固件, Webpad固件, YYF, Rush, N1旁路由, K2P固件, 荒野无灯
+encoding: utf-8
 side_bar_repo_limit: 5
-repository: mzlogin/mzlogin.github.io
-# 对 css 和 js 资源的 cdn 加速配置
+repository: getrom/getrom.github.io
 cdn:
-    jsdelivr:
-        enabled: true
-# 组件配置
+  jsdelivr:
+    enabled: true
 components:
-    # 分享
-    share:
-        enabled: false
-    # 不蒜子访问统计
-    busuanzi:
-        enabled: true
-        start_date: 2020-05-03
-# 压缩页面内容
+  share:
+    enabled: false
+  busuanzi:
+    enabled: true
+    start_date: 2020-05-03 00:00:00.000000000 Z
 compress_html:
   clippings: all
-  comments: ["<!--", "-->"]
-# 文章字数统计
+  comments:
+  - "<!--"
+  - "-->"
 word_count:
-    enabled: true
-# 代码高亮风格，支持的 theme 列表见 https://github.com/mzlogin/rouge-themes
+  enabled: true
 highlight_theme: github
-
-# ---------------- #
-#      Author      #
-# ---------------- #
-author: Zhuang Ma
+author: Old White
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
-
-# ---------------- #
-#    Navigation    #
-# ---------------- #
+github_username: getrom
+location: Beijing, China
+email: public@getromCN.onmicrosoft.com
 navs:
-  -
-    href: /
-    label: 首页
-
-  -
-    href: /categories/
-    label: 分类
-
-#   -
-#     href: /archives/
-#     label: 归档
-
-#   -
-#     href: /open-source/
-#     label: 开源
-
-  -
-    href: /wiki/
-    label: 维基
-
-  -
-    href: /links/
-    label: 链接
-
-  -
-    href: /about/
-    label: 关于
-
-# ---------------- #
-#       RSS        #
-# ---------------- #
-subscribe_rss: /feed.xml
-
-# ---------------- #
-#      Jekyll      #
-# ---------------- #
+- href: "/"
+  label: 首页
+- href: "/categories/"
+  label: 分类
+- href: "/wiki/"
+  label: 维基
+- href: "/links/"
+  label: 链接
+- href: "/about/"
+  label: 关于
+subscribe_rss: "/feed.xml"
 markdown: kramdown
 kramdown:
-    input: GFM
+  input: GFM
 highlighter: rouge
 paginate: 10
 lsi: false
 quiet: false
 excerpt_separator: "\n\n"
-permalink: /:year/:month/:day/:title/
+permalink: "/:year/:month/:day/:title/"
 plugins:
-    - jekyll-github-metadata
-    - rouge
-#     - jekyll-html-pipeline
-    - jekyll-paginate
-    - jekyll-sitemap
-    - jekyll-feed
-    - jemoji
-#     - jekyll-mentions
-collections:
-    wiki:
-        output: true
-        permalink: /wiki/:path/
-
-# ---------------- #
-#      Comments    #
-# ---------------- #
-# support provider: disqus, gitment, gitalk
+- jekyll-github-metadata
+- rouge
+- jekyll-paginate
+- jekyll-sitemap
+- jekyll-feed
+- jemoji
 comments_provider: gitalk
-# !!!重要!!! 请修改下面这些信息为你自己申请的
-# !!!Important!!! Please modify infos below to yours
-# https://disqus.com
 disqus:
-    username: 
-# https://imsun.net/posts/gitment-introduction/
+  username: 
 gitment:
-    owner: mzlogin
-    repo: blog-comments
-    oauth:
-        client_id: d2e1cbbd298958076462
-        client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
-# https://github.com/gitalk/gitalk#install
+  owner: GetROM
+  repo: gitalk_store
+  oauth:
+    client_id: 1087ba267266a2585931
+    client_secret: 83cd748ce24c66f4ab273a81947023b7ca61a6fd
 gitalk:
-    owner: mzlogin
-    repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
-# 在使用其它评论组件时可点击显示 Disqus
-lazy_load_disqus : false
-
-# ---------------- #
-#      Search      #
-# ---------------- #
+  owner: GetROM
+  admin:getromcn
+  repo: gitalk_store
+  clientID: 1087ba267266a2585931
+  clientSecret: 83cd748ce24c66f4ab273a81947023b7ca61a6fd
+lazy_load_disqus: false
 simple_jekyll_search:
-    # 是否支持全文搜索
-    fulltext: false
-    # 最多显示多少条搜索结果
-    limit: 10
-
-# ---------------- #
-#      Google      #
-# ---------------- #
+  fulltext: false
+  limit: 10
 google:
-    analytics_id: UA-80669434-1
-    adsense:
-        footer: true
-        sidebar: true 
-        content_header: true
-        content_footer: false
+  analytics_id: UA-1286743-4
+  adsense:
+    footer: true
+    sidebar: true
+    content_header: true
+    content_footer: false
